[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/util/state_machine/state_machine.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/entity/character/input_state.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/entity/character/character.gd" type="Script" id=4]

[node name="character" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="state_machine" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="animation_player" type="AnimationPlayer" parent="."]
unique_name_in_owner = true

[node name="input_state" parent="." instance=ExtResource( 2 )]

[node name="pivot" type="Node2D" parent="."]
unique_name_in_owner = true
